--- a/_posts/2022-03-29-HW-1.md
+++ b/_posts/2022-03-29-HW-1.md
@@ -1,45 +1,90 @@
 ---
 layout: post
-title:  "Blog Post: Data Wrangling and Visualization"
+title:  "Exploring Climate Data"
 categories: blog assignment
 permalink: posts/blog-post-1
-author: Phil Chodrow
+author: Pei Xi Kwok
 ---
 
+In this blog post, we'll create several interesting, interactive data graphics using the NOAA climate data. 
+We begin by importing the necessary packages, as well as the csv files.
 
-In this blog post, you'll create several interesting, interactive data graphics using the NOAA climate data that we've explored in the first several weeks of lectures. 
+```python
+# import packages
+import pandas as pd
+import numpy as np
+import plotly.express as px
+import sqlite3
 
-## General Requirements
+# read in csv files
+temps = pd.read_csv("temps_stacked-Copy1.csv")
+countries = pd.read_csv('countries-Copy1.csv')
+url = "https://raw.githubusercontent.com/PhilChodrow/PIC16B/master/datasets/noaa-ghcn/station-metadata.csv"
+stations = pd.read_csv(url)
 
-Your post should include not only code but also **outputs** (i.e. tables, figures) and **expository writing** that explains what you're doing. Your target audience is a a student who has completed PIC16A but hasn't taken PIC16B yet (i.e. you before the start of the quarter). 
+# rename column FIPS 10-4 for ease in later queries
+countries = countries.rename(columns={"FIPS 10-4":"FIPS_10_4"})
+```
 
-See the "Specifications" section at the bottom for a detailed list of specs. 
+## 1. Creating a database
 
-## §1. Create a Database
+First, let us read in create a database with three tables: `temperatures`, `stations`, and `countries`.  
 
-First, create a database with three tables: `temperatures`, `stations`, and `countries`. Refer back to lecture notes on how to access country names and relate them to temperature readings. Keep these as three separate tables in your database. 
+```python
+# form a connection using connect method
+conn = sqlite3.connect("temps.db")
 
-Make sure to close the database connection after you are finished constructing it. 
+# converts dataframes to sql
+temps.to_sql("temperatures",conn,if_exists="replace", index=False)
+countries.to_sql("countries",conn,if_exists="replace",index=False)
+stations.to_sql("stations",conn,if_exists="replace",index=False)
 
-## §2. Write a Query Function
+# close the connection
+conn.close()
+```
 
-Write a Python function called `query_climate_database()` which accepts four arguments: 
+## 2. Creating a query function to explore the database
 
-- `country`, a string giving the name of a country (e.g. 'South Korea') for which data should be returned. 
-- `year_begin` and `year_end`, two integers giving the earliest and latest years for which should be returned. 
-- `month`, an integer giving the month of the year for which should be returned. 
+We want to query our database in order to start making sense of it. Let's begin by getting temperature readings for all stations country in a specific date range and a specific month. To do that, we will create a query function.
 
-The return value of `query_climate_database()` is a Pandas dataframe of temperature readings for the specified country, in the specified date range, in the specified month of the year. This dataframe should have columns for: 
+```python
+def query_climate_database(country, year_begin, year_end, month):
+    """
+    Executes a query to get temperature readings for a country in a specific date range and a specific month
+    
+    country: a string giving the name of a country (e.g. ‘South Korea’) for which data should be returned
+    year_begin, year_end: two integers giving the earliest and latest years for which should be returned
+    month: integer giving the month of the year for which should be returned
+    
+    returns Pandas dataframe of temperature readings for the specified country in the specified date range,
+    in the specified month of the year
+    """
+    # identify country id
+    country_id = countries["FIPS_10_4"][countries["Name"] == country].values[0]
+    
+    # create parameters using user input 
+    param1 = (country_id,year_begin,year_end,month)
+    
+    # create query
+    # use left join to join stations and temperature tables
+    # use substring to identify country id for query
+    query1 = \
+    """
+    SELECT s.name, s.latitude, s.longitude, c.name, t.year, t.month, t.temp
+    FROM temperatures t
+    LEFT JOIN stations s ON t.id = s.id
+    LEFT JOIN countries c ON SUBSTRING(t.id,1,2)=c.FIPS_10_4
+    WHERE SUBSTRING(t.id,1,2)=? AND (t.year BETWEEN ? AND ?) AND (t.month=?)
+    """
+    
+    # reads result of query with parameters to a pandas dataframe
+    df = pd.read_sql_query(query1, conn, params=param1)
+    
+    return df
+```
 
-- The station name.
-- The latitude of the station. 
-- The longitude of the station. 
-- The name of the country in which the station is located.
-- The year in which the reading was taken. 
-- The month in which the reading was taken. 
-- The average temperature at the specified station during the specified year and month. (*Note: the temperatures in the raw data are already averages by month, so you don't have to do any aggregation at this stage.*)
+Let's test our function!
 
-For example:
 ```python
 query_climate_database(country = "India", 
                        year_begin = 1980, 
@@ -192,21 +237,107 @@ query_climate_database(country = "India",
 </div>
 
 
-## §3. Write a Geographic Scatter Function for Yearly Temperature Increases
+## 3. Creating visualizations using our database and query results 
 
-In this part, you will write a function to create visualizations that address the following question: 
+Now let's try to create visualizations using our query results. In particular, we want to address the following question: 
 
 > How does the average yearly change in temperature vary within a given country? 
 
-Write a function called `temperature_coefficient_plot()`. This function should accept five explicit arguments, and an undetermined number of keyword arguments. 
+We will do so by write a function called `temperature_coefficient_plot()`, which will create a geographic scatter function that illustrates yearly temperature increases.
 
-- `country`, `year_begin`, `year_end`, and `month` should be as in the previous part. 
-- `min_obs`, the minimum required number of years of data for any given station. Only data for stations with at least `min_obs` years worth of data in the specified month should be plotted; the others should be filtered out. `df.transform()` plus filtering is a good way to achieve this task. 
-- `**kwargs`, additional keyword arguments passed to `px.scatter_mapbox()`. These can be used to control the colormap used, the mapbox style, etc. 
+In order to calculate year-over-year change in temperature, we will make use of the coefficients derived from a linear regression model.
 
-The output of this function should be an interactive geographic scatterplot, constructed using Plotly Express, with a point for each station, such that the color of the point reflects an estimate of the yearly change in temperature during the specified month and time period at that station. A reasonable way to do this is to compute the first coefficient of a linear regression model at that station, as illustrated in lecture. 
+```python
+# import linear regression model from sklearn
+from sklearn.linear_model import LinearRegression
 
-For example, after writing your function, you should be able to create a plot of estimated yearly increases in temperature during the month of January, in the interval 1980-2020, in India, as follows: 
+def coef(data_group):
+    """
+    Computes first coefficient of a linear regression model at a given station
+    
+    data_group: groupby object grouped based on station name
+    
+    returns first coefficient of LR model for a given station rounded to 4dp
+    """
+    # assign "Year" as X variable and "Temp" as Y variable
+    X = data_group[["Year"]]
+    Y = data_group["Temp"]
+    
+    # create an instance of a linear regression model
+    LR = LinearRegression()
+    
+    # fit model to X and Y
+    LR.fit(X,Y)
+    
+    # retrieve first coefficient and rounds to 4dp
+    slope = LR.coef_[0].round(decimals = 4)
+    
+    return slope
+```
+
+Now that we have that set up, let's try to define a function that will generate an interactive geographic scatterplot that shows us the estimated yearly increases in a specific month and interval in a given country.
+
+```python
+def temperature_coefficient_plot(country, year_begin, year_end, month, min_obs, **kwargs):
+    """
+    Creates an interactive geographic scatterplot to determine how the average yearly change in 
+    temperature varies within a given country
+    
+    country: a string giving the name of a country (e.g. ‘South Korea’) for which data should be returned
+    year_begin, year_end: two integers giving the earliest and latest years for which should be returned
+    month: integer giving the month of the year for which should be returned
+    min_obs: the minimum required number of years of data for any given station.
+    **kwargs: additional keyword arguments passed to px.scatter_mapbox() e.g. colormap used, mapbox style
+    
+    returns an interactive geographic scatterplot with a point for each station
+    where color reflects an estimate of yearly change in temperature in the specified month of the given station
+    """
+    
+    # call query_climate_database to obtain dataframe with necessary temp readings
+    df = query_climate_database(country, year_begin, year_end, month)
+    
+    # limit data to stations with min_obs no. of years of data
+    df = df.loc[df.groupby(["NAME"])["Year"].transform('count') >= min_obs]
+    
+    # call coef to generate an estimate of the yearly change in temperature
+    df["Estimated Yearly Change (°C)"] = df["NAME"].map(df.groupby(["NAME"]).apply(coef))
+    
+    # dict to index month name for title 
+    title_month = {
+        1:"January",
+        2:"February",
+        3:"March",
+        4:"April",
+        5:"May",
+        6:"June",
+        7:"July",
+        8:"August",
+        9:"September",
+        10:"October",
+        11:"November",
+        12:"December"
+    }
+    
+    # string for plot title
+    title_str = "Estimates of yearly change in temperature in " + title_month[month] + " for stations in " + country + ", years " + str(year_begin) + "-" + str(year_end)
+    
+    # create plot
+    fig = px.scatter_mapbox(df,
+                           lat = "LATITUDE",
+                           lon = "LONGITUDE",
+                           hover_name = "NAME",
+                            title = title_str,
+                            color = "Estimated Yearly Change (°C)",
+                            color_continuous_midpoint=0,
+                            **kwargs)
+    
+    # adjusts margins
+    fig.update_layout(margin={"r":0,"t":50,"l":0,"b":0})
+    
+    return fig
+```
+
+Let's test it out. Say I want to create a plot of estimated yearly increases in temperature during the month of January, in the interval 1980-2020, in India: 
 
 ```python
 # assumes you have imported necessary packages
@@ -221,22 +352,21 @@ fig = temperature_coefficient_plot("India", 1980, 2020, 1,
 fig.show()
 ```
 
-
 <div class = "display">
 {% include india-HW1-example.html %}
 </div>
-Please pay attention to the following details:
 
-- The station name is shown when you hover over the corresponding point on the map. 
-- The estimates shown in the hover are rounded to a sober number of significant figures. 
-- The colorbar and overall plot have professional titles. 
-- The colorbar is **centered at 0**, so that the "middle" of the colorbar (white, in this case) corresponds to a coefficient of 0. 
+Let's try it out on something else. Say I want to create a plot for estimated yearly increases in temperature during the month of January, in the interval 1980-2020 for Brazil:
 
-It's not necessary for your plot to look exactly like mine, but please attend to details such as these. Feel free to be creative about these labels, as well as the choice of colors, as long as your result is polished overall. 
+```python
+fig = temperature_coefficient_plot("Brazil", 1980, 2020, 1, 
+                                   min_obs = 10,
+                                   zoom = 2,
+                                   mapbox_style="carto-positron",
+                                   color_continuous_scale=color_map)
 
-You are free (and indeed encouraged) to define additional functions as needed. 
-
-Once you have one plot for 1980-2020 India that looks similar to this example, make one more plot that looks at a different country and/or time period.
+fig.show()
+```
 
 ## §4. Create Two More Interesting Figures
 
@@ -247,32 +377,3 @@ Alongside the plots, you should clearly state a question that the plot addresses
 It is not necessary to create *geographic* plots for this part. Scatterplots, histograms, and line plots (among other choices) are all appropriate. Please make sure that they are complex, engaging, professional, and targeted to the questions you posed. In other words, *push yourself!* Don't hesitate to ask your peers or talk to me if you're having trouble coming up with questions or identifying plots that might be suitable for addressing those questions. 
 
 Once you're done, commit and push your post to publish it to the web. Then, print the webpage as a PDF and submit it on Gradescope. 
-
-# Specifications
-
-Please remember that all specifications must be met in order for the blog post to earn credit. 
-
-## Coding Problem
-
-1. `query_climate_database()` function is correctly defined according to the prompt.
-1. There are two geographic scatterplots, one for 1980-2020 India that looks similar to the provided example, and another one for a different time and/or country.
-1. The geographic scatterplots are correctly constructed and professionally labeled, including a title, hovers with rounded estimates, and a correctly centered colorbar. 
-5. There is at least one more sql query function defined.
-2. There are two other interactive plots constructed using Plotly. 
-2. One of these plots involves the use of multiple facets. 
-3. The two other plots are wrapped in appropriate, user-friendly functions. 
-4. Each of the two other interactive plots have descriptive titles and centered color maps when appropriate. 
-
-
-## Style and Documentation
-
-2. Repeated operations should are enclosed in functions. 
-3. For-loops are minimized by making full use of vectorized operations for Numpy arrays and Pandas data frames. 
-4. Helpful comments are supplied throughout the code. Docstrings are supplied for any functions and classes you define. 
-
-## Writing
-
-1. The overall post is written in engaging and unambiguous English prose. There is written explanation throughout the post, such that a PIC16A student could learn to perform the demonstrated tasks by reading the post.  
-2. Each block of code has a clearly-explained purpose. 
-3. The post is organized into clearly delimited sections using markdown headers (\#), making it easier for the reader to navigate.  
-4. The post has a different title from "Blog Post: Data Wrangling and Visualization" or "Blog Post 1". Please rename it to something more relevant and specific to your data analysis.
