edits made to part I and II

--- a/_posts/2022-03-29-HW-1.md
+++ b/_posts/2022-03-29-HW-1.md
@@ -22,13 +22,13 @@ countries = pd.read_csv('countries-Copy1.csv')
 url = "https://raw.githubusercontent.com/PhilChodrow/PIC16B/master/datasets/noaa-ghcn/station-metadata.csv"
 stations = pd.read_csv(url)
 
-# rename column FIPS 10-4 for ease in later queries
+# rename column FIPS 10-4 for ease in executing queries
 countries = countries.rename(columns={"FIPS 10-4":"FIPS_10_4"})
 ```
 
 ## 1. Creating a database
 
-First, let us read in create a database with three tables: `temperatures`, `stations`, and `countries`.  
+First, let us create a database with three tables: `temperatures`, `stations`, and `countries`.  
 
 ```python
 # form a connection using connect method
@@ -38,9 +38,6 @@ conn = sqlite3.connect("temps.db")
 temps.to_sql("temperatures",conn,if_exists="replace", index=False)
 countries.to_sql("countries",conn,if_exists="replace",index=False)
 stations.to_sql("stations",conn,if_exists="replace",index=False)
-
-# close the connection
-conn.close()
 ```
 
 ## 2. Creating a query function to explore the database
@@ -52,9 +49,9 @@ def query_climate_database(country, year_begin, year_end, month):
     """
     Executes a query to get temperature readings for a country in a specific date range and a specific month
     
-    country: a string giving the name of a country (e.g. ‘South Korea’) for which data should be returned
-    year_begin, year_end: two integers giving the earliest and latest years for which should be returned
-    month: integer giving the month of the year for which should be returned
+    country: string giving country name for query
+    year_begin, year_end: two ints giving date range for query
+    month: int giving month of the year for query
     
     returns Pandas dataframe of temperature readings for the specified country in the specified date range,
     in the specified month of the year
@@ -70,7 +67,7 @@ def query_climate_database(country, year_begin, year_end, month):
     # use substring to identify country id for query
     query1 = \
     """
-    SELECT s.name, s.latitude, s.longitude, c.name, t.year, t.month, t.temp
+    SELECT s.name, s.latitude, s.longitude, c.name Country, t.year, t.month, t.temp
     FROM temperatures t
     LEFT JOIN stations s ON t.id = s.id
     LEFT JOIN countries c ON SUBSTRING(t.id,1,2)=c.FIPS_10_4
@@ -245,7 +242,7 @@ Now let's try to create visualizations using our query results. In particular, w
 
 We will do so by write a function called `temperature_coefficient_plot()`, which will create a geographic scatter function that illustrates yearly temperature increases.
 
-In order to calculate year-over-year change in temperature, we will make use of the coefficients derived from a linear regression model.
+In order to calculate year-over-year change in temperature, we have to make use of the coefficients derived from a linear regression model.
 
 ```python
 # import linear regression model from sklearn
@@ -283,11 +280,11 @@ def temperature_coefficient_plot(country, year_begin, year_end, month, min_obs, 
     Creates an interactive geographic scatterplot to determine how the average yearly change in 
     temperature varies within a given country
     
-    country: a string giving the name of a country (e.g. ‘South Korea’) for which data should be returned
-    year_begin, year_end: two integers giving the earliest and latest years for which should be returned
-    month: integer giving the month of the year for which should be returned
-    min_obs: the minimum required number of years of data for any given station.
-    **kwargs: additional keyword arguments passed to px.scatter_mapbox() e.g. colormap used, mapbox style
+    country: string giving country name for query
+    year_begin, year_end: two int giving date range for query
+    month: int giving month of the year for query
+    min_obs: int giving minimum required no. of years of data for plot
+    **kwargs: additional keyword arguments passed to px.scatter_mapbox()
     
     returns an interactive geographic scatterplot with a point for each station
     where color reflects an estimate of yearly change in temperature in the specified month of the given station
@@ -319,7 +316,8 @@ def temperature_coefficient_plot(country, year_begin, year_end, month, min_obs, 
     }
     
     # string for plot title
-    title_str = "Estimates of yearly change in temperature in " + title_month[month] + " for stations in " + country + ", years " + str(year_begin) + "-" + str(year_end)
+    title_str = "Estimates of yearly change in temperature in " +title_month[month]+\
+    " for stations in " + country + ", years " + str(year_begin) + "-" + str(year_end)
     
     # create plot
     fig = px.scatter_mapbox(df,
@@ -337,7 +335,7 @@ def temperature_coefficient_plot(country, year_begin, year_end, month, min_obs, 
     return fig
 ```
 
-Let's test it out. Say I want to create a plot of estimated yearly increases in temperature during the month of January, in the interval 1980-2020, in India: 
+Let's test it out. Say I want to create a plot of estimated yearly increases in temperature during the month of January, in the interval 1980-2020 for India: 
 
 ```python
 # assumes you have imported necessary packages
@@ -356,7 +354,7 @@ fig.show()
 {% include india-HW1-example.html %}
 </div>
 
-Let's try it out on something else. Say I want to create a plot for estimated yearly increases in temperature during the month of January, in the interval 1980-2020 for Brazil:
+Let's try it out on something else. Say I want to create a plot for estimated yearly increases in temperature during the month of April, in the interval 1980-2020 for Brazil:
 
 ```python
 fig = temperature_coefficient_plot("Brazil", 1980, 2020, 1, 
@@ -367,6 +365,9 @@ fig = temperature_coefficient_plot("Brazil", 1980, 2020, 1,
 
 fig.show()
 ```
+
+
+
 
 ## §4. Create Two More Interesting Figures
 
