final changes before submission

--- a/_posts/2022-03-29-HW-1.md
+++ b/_posts/2022-03-29-HW-1.md
@@ -89,7 +89,6 @@ query_climate_database(country = "India",
                        month = 1)
 ```
 
-
 <div>
 <style scoped>
     .dataframe tbody tr th:only-of-type {
@@ -233,7 +232,6 @@ query_climate_database(country = "India",
 <p>3152 rows × 7 columns</p>
 </div>
 
-
 ## 3. Creating visualizations using our database and query results 
 
 Now let's try to create visualizations using our query results. In particular, we want to address the following question: 
@@ -272,6 +270,27 @@ def coef(data_group):
     return slope
 ```
 
+We will also need to create a dictionary that will allow us to index the name of the month with the month number for our visualization.
+
+```python
+# dict to index month name for title 
+title_month = {
+    1:"January",
+    2:"February",
+    3:"March",
+    4:"April",
+    5:"May",
+    6:"June",
+    7:"July",
+    8:"August",
+    9:"September",
+    10:"October",
+    11:"November",
+    12:"December"
+}
+
+```
+
 Now that we have that set up, let's try to define a function that will generate an interactive geographic scatterplot that shows us the estimated yearly increases in a specific month and interval in a given country.
 
 ```python
@@ -298,22 +317,6 @@ def temperature_coefficient_plot(country, year_begin, year_end, month, min_obs, 
     
     # call coef to generate an estimate of the yearly change in temperature
     df["Estimated Yearly Change (°C)"] = df["NAME"].map(df.groupby(["NAME"]).apply(coef))
-    
-    # dict to index month name for title 
-    title_month = {
-        1:"January",
-        2:"February",
-        3:"March",
-        4:"April",
-        5:"May",
-        6:"June",
-        7:"July",
-        8:"August",
-        9:"September",
-        10:"October",
-        11:"November",
-        12:"December"
-    }
     
     # string for plot title
     title_str = "Estimates of yearly change in temperature in " +title_month[month]+\
@@ -349,15 +352,12 @@ fig = temperature_coefficient_plot("India", 1980, 2020, 1,
 
 fig.show()
 ```
-
-<div class = "display">
-{% include india-HW1-example.html %}
-</div>
+{% include test_1_scatter.html %}
 
 Let's try it out on something else. Say I want to create a plot for estimated yearly increases in temperature during the month of April, in the interval 1980-2020 for Brazil:
 
 ```python
-fig = temperature_coefficient_plot("Brazil", 1980, 2020, 1, 
+fig = temperature_coefficient_plot("Brazil", 1980, 2020, 4, 
                                    min_obs = 10,
                                    zoom = 2,
                                    mapbox_style="carto-positron",
@@ -365,16 +365,487 @@ fig = temperature_coefficient_plot("Brazil", 1980, 2020, 1,
 
 fig.show()
 ```
+{% include test_2_scatter.html %}
 
+## 4. Create more queries and more visualizations
 
+Now that we know how to create queries and visualizations, let's try to answer other questions such as:
 
+> How does the distribution of temperature readings for a given month in a given year compare across countries in the same latitude range?
 
-## §4. Create Two More Interesting Figures
+To do that, we will first write a dictionary that will make it easier for us to index specific latitude zones/ranges.
 
-Create at least one more SQL query function and at least two more complex and interesting interactive data visualizations using the same data set. These plots must be of different *types* (e.g. line and bar, scatter and histogram, etc). The code to construct each visualization should be wrapped in functions, such that a user could create visualizations for different parts of the data by calling these functions with different arguments. At least one of these plots must involve multiple facets (i.e. multiple axes (in the sense of facets), each of which shows a subset of the data). 
+```python
+# index for each region, as defined by latitude zones
+lat_index = {
+    "Arctic":[66.57,90],
+    "Cancer-Arctic":[23.43,66.57],
+    "Cancer-Equator":[0,23.43],
+    "Equator-Capricorn":[-23.43,0],
+    "Capricorn-Antarctic":[-66.57,-23],
+    "Antarctic":[-90,-66.57]}
+```
 
-Alongside the plots, you should clearly state a question that the plot addresses, similar to the question that we posed in §3. The questions for your two additional plots should be meaningfully different from each other and from the §3 question. You will likely want to define different query functions for extracting data for these new visualizations.  
+We will now write a query function to get temperature readings for all stations within the specified latitude zone in the given month and year.
 
-It is not necessary to create *geographic* plots for this part. Scatterplots, histograms, and line plots (among other choices) are all appropriate. Please make sure that they are complex, engaging, professional, and targeted to the questions you posed. In other words, *push yourself!* Don't hesitate to ask your peers or talk to me if you're having trouble coming up with questions or identifying plots that might be suitable for addressing those questions. 
+```python
+def query_stations(lat_zone, year, month):
+    """
+    Executes a query to get temperature readings for all stations
+    within a specific latitude range in a given month and year
+    
+    lat_zone: string indexing latitude range for query
+    year: int giving year for query
+    month: int giving month for query
+    
+    returns Pandas dataframe of temperature readings for all stations
+    within the latitude range in the specified month and year
+    """
+    
+    # create parameters using user input 
+    param = (lat_index[lat_zone][0],lat_index[lat_zone][1],year,month)
+    
+    # create query
+    # use left join to join stations, countries and temperature tables
+    query1 = \
+    """
+    SELECT s.name, s.latitude, s.longitude, c.name Country, t.year, t.month, t.temp
+    FROM temperatures t
+    LEFT JOIN stations s ON t.id = s.id
+    LEFT JOIN countries c ON SUBSTRING(t.id,1,2)=c.FIPS_10_4
+    WHERE (s.latitude BETWEEN ? AND ?) AND (t.year = ?) AND (t.month = ?)
+    """
+    
+    # reads result of query with parameters to a pandas dataframe
+    df = pd.read_sql_query(query1, conn, params=param)
+    
+    return df
+```
 
-Once you're done, commit and push your post to publish it to the web. Then, print the webpage as a PDF and submit it on Gradescope. 
+Let's test it out. 
+
+```python
+testframe = query_stations("Arctic", 2017, 5)
+testframe
+```
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>NAME</th>
+      <th>LATITUDE</th>
+      <th>LONGITUDE</th>
+      <th>Country</th>
+      <th>Year</th>
+      <th>Month</th>
+      <th>Temp</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>HERSCHEL_ISLAND</td>
+      <td>69.5667</td>
+      <td>-138.9167</td>
+      <td>Canada</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>-1.21</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>IVVAVIK_NAT_PARK</td>
+      <td>69.1667</td>
+      <td>-140.1500</td>
+      <td>Canada</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>2.83</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>OLD_CROW_RCS</td>
+      <td>67.5667</td>
+      <td>-139.8333</td>
+      <td>Canada</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>6.56</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>ROCK_RIVER</td>
+      <td>66.9833</td>
+      <td>-136.2167</td>
+      <td>Canada</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>5.46</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>INUVIK_A</td>
+      <td>68.3000</td>
+      <td>-133.4833</td>
+      <td>Canada</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>4.05</td>
+    </tr>
+    <tr>
+      <th>...</th>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+    </tr>
+    <tr>
+      <th>234</th>
+      <td>DEADHORSE_AP</td>
+      <td>70.1917</td>
+      <td>-148.4772</td>
+      <td>United States</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>-2.54</td>
+    </tr>
+    <tr>
+      <th>235</th>
+      <td>BARROW_POST_ROGERS_AP</td>
+      <td>71.2833</td>
+      <td>-156.7814</td>
+      <td>United States</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>-4.35</td>
+    </tr>
+    <tr>
+      <th>236</th>
+      <td>WAINWRIGHT_AP</td>
+      <td>70.6392</td>
+      <td>-159.9950</td>
+      <td>United States</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>-3.39</td>
+    </tr>
+    <tr>
+      <th>237</th>
+      <td>NUIQSUT_AP</td>
+      <td>70.2117</td>
+      <td>-151.0017</td>
+      <td>United States</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>-3.20</td>
+    </tr>
+    <tr>
+      <th>238</th>
+      <td>BARROW_4_ENE</td>
+      <td>71.3214</td>
+      <td>-156.6111</td>
+      <td>United States</td>
+      <td>2017</td>
+      <td>5</td>
+      <td>-4.82</td>
+    </tr>
+  </tbody>
+</table>
+<p>239 rows × 7 columns</p>
+</div>
+
+We will now write a function to generate an interactive boxplot to show distribution of temperature readings in a given month and year for each country in a latitude zone.
+
+```python
+def boxplot_plot(lat_zone, year, month,min_stns, **kwargs):
+    """
+    Creates an interactive boxplot to show distribution of temperature
+    readings in a given month and year for each country in a latitude zone
+    
+    lat_zone: string indexing latitude range for query
+    year: int giving year for query
+    month: int giving month for query
+    min_stns: int giving minimum required no. of stations for data for plot
+    **kwargs: additional keyword arguments passed to px.box()
+    
+    returns an interactive boxplot showing distribution of temperature
+    readings in a given month and year for each country in a latitude zone
+    """
+    # call query_stations to obtain necessary dataframe
+    df = query_stations(lat_zone, year, month)
+    
+    
+    # limit data to countries with min_stns number of stations
+    df = df.loc[df.groupby(["Country"])["NAME"].transform('count')>= min_stns]
+    
+    # string for plot title
+    title_text = "Distribution of average temperature readings for "+\
+    title_month[month]+" "+str(year)+" for countries in the "+\
+    lat_zone+" Latitude Zone"
+    
+    # create plot
+    fig = px.box(df6,
+                 x = "Temp",
+                 y = "Country",
+                 color = "Country",
+                 title = title_text,
+                 points = "all",
+                 **kwargs)
+    
+    # hide legend as labels on y-axis make it redundant
+    fig.update_layout(showlegend=False)
+    
+    return fig    
+```
+Let's test it out! Say I want to find out about the distribution of temperature readings for August 2017 in the Arctic with minimum number of stations being 10.
+
+```python
+boxplot_plot("Arctic",2017,8,10)
+```
+{% include boxplot.html %}
+
+We might also be interested in answering the question of:
+
+> How can we compare the change in minimum and maximum temperature of two countries over a given period of time?
+
+Similar to what we did above, we start by defining a query function.
+
+```python
+def compare_query(year_begin,year_end,countries):
+    """
+    Executes a query to get temperature readings for stations in user-specified countries
+    for a user-specified month and year
+    
+    year_begin, year_end: 2 ints giving period to be queried
+    countries: list of 2 strings giving us pair of countries to be queried
+    
+    returns Pandas dataframe of temperature readings for the specified countries for specified month and year
+    """
+    
+    # create parameters for query using user input 
+    param = (year_begin,year_end,countries[0],countries[1])
+    
+    # create query
+    # use left join to join stations and temperature tables
+    query1 = \
+    """
+    SELECT t.year, c.name, t.month, MIN(t.temp) Min, MAX(t.temp) Max
+    FROM temperatures t
+    LEFT JOIN stations s ON t.id = s.id
+    LEFT JOIN countries c ON SUBSTRING(t.id,1,2)=c.FIPS_10_4
+    WHERE (t.year BETWEEN ? AND ?) AND (c.name=? OR c.name=?)
+    GROUP BY c.name, t.month, t.year
+    ORDER BY c.name, t.year
+    """
+    
+    # reads result of query with parameters to a pandas dataframe
+    df = pd.read_sql_query(query1, conn, params=param)
+    
+    df["Date"] = pd.to_datetime(df["Year"].astype(str) + "-" + df["Month"].astype(str))
+    
+    return df
+```
+
+Let's test it out. 
+
+```python
+compare_query(1980,1985,["Botswana","France"])
+```
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Year</th>
+      <th>Name</th>
+      <th>Month</th>
+      <th>Min</th>
+      <th>Max</th>
+      <th>Date</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>1980</td>
+      <td>Botswana</td>
+      <td>1</td>
+      <td>25.61</td>
+      <td>27.58</td>
+      <td>1980-01-01</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>1980</td>
+      <td>Botswana</td>
+      <td>2</td>
+      <td>24.28</td>
+      <td>27.20</td>
+      <td>1980-02-01</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>1980</td>
+      <td>Botswana</td>
+      <td>3</td>
+      <td>22.93</td>
+      <td>24.50</td>
+      <td>1980-03-01</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>1980</td>
+      <td>Botswana</td>
+      <td>4</td>
+      <td>20.09</td>
+      <td>22.63</td>
+      <td>1980-04-01</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>1980</td>
+      <td>Botswana</td>
+      <td>5</td>
+      <td>16.54</td>
+      <td>19.77</td>
+      <td>1980-05-01</td>
+    </tr>
+    <tr>
+      <th>...</th>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+      <td>...</td>
+    </tr>
+    <tr>
+      <th>139</th>
+      <td>1985</td>
+      <td>France</td>
+      <td>8</td>
+      <td>12.91</td>
+      <td>23.22</td>
+      <td>1985-08-01</td>
+    </tr>
+    <tr>
+      <th>140</th>
+      <td>1985</td>
+      <td>France</td>
+      <td>9</td>
+      <td>3.05</td>
+      <td>22.68</td>
+      <td>1985-09-01</td>
+    </tr>
+    <tr>
+      <th>141</th>
+      <td>1985</td>
+      <td>France</td>
+      <td>10</td>
+      <td>5.03</td>
+      <td>18.54</td>
+      <td>1985-10-01</td>
+    </tr>
+    <tr>
+      <th>142</th>
+      <td>1985</td>
+      <td>France</td>
+      <td>11</td>
+      <td>-1.99</td>
+      <td>11.98</td>
+      <td>1985-11-01</td>
+    </tr>
+    <tr>
+      <th>143</th>
+      <td>1985</td>
+      <td>France</td>
+      <td>12</td>
+      <td>1.11</td>
+      <td>10.47</td>
+      <td>1985-12-01</td>
+    </tr>
+  </tbody>
+</table>
+<p>144 rows × 6 columns</p>
+</div>
+
+We will now write a function to generate an interactive line chart to show the change in min and max temperatures in a specified period across two countries.
+
+```python
+def line_chart_plot(year_begin,year_end,countries,**kwargs):
+    """
+    Creates an interactive line chart to illustrate change in min and max temperatures
+    in a specified period across two countries
+    
+    year_begin, year_end: 2 ints giving period to be queried
+    countries: list of 2 strings giving us pair of countries to be queried
+    **kwargs: additional keyword arguments passed to px.line()
+    
+    returns an interactive line chart with a point for min and max temperature readings
+    for each month and year of each country
+    """
+    
+    # call compare_query to create dataframe
+    df = compare_query(year_begin,year_end,countries)
+    
+    # string for plot title
+    title_text = "Max. and min. monthly temperature readings for "+countries[0]+\
+    " and "+countries[1]+", "+str(year_begin)+"-"+str(year_end)
+    
+    # create plot
+    fig = px.line(df,
+                 x="Date",
+                 y=["Max","Min"],
+                 facet_col = "Name",
+                  title = title_text,
+                  hover_data = {"Name":False, "variable": False},
+                  labels = {"value":"Temperature (°C)", "Name":"country","variable":"Measurement type"},
+                  **kwargs
+                 )
+    
+    return fig
+```
+
+Let's test it out. Say I want to visualize the change in min. and max. temperatures from 1980 to 1985 between Botswana and France.
+
+```python
+line_chart_plot(1980,1985,["Botswana","France"])
+```
+{% include line.html %}
+
+After you have successfully queried all the data you need, remember to close the connection to the database.
+
+```python
+conn.close()
+```
+Congrats! You have learnt how to write and execute queries and generate interactive visualizations using plotly.express.
